tests/ui/validate_min_length_on_u8.stderr
error[E0277]: the trait bound `u8: std::convert::AsRef<str>` is not satisfied
 --> $DIR/validate_min_length_on_u8.rs:3:10
  |
3 | #[derive(FormData)]
  |          ^^^^^^^^ the trait `std::convert::AsRef<str>` is not implemented for `u8`
  |
  = note: required because of the requirements on the impl of `gotham_formdata::validate::Validator<u8>` for `gotham_formdata::validate::MinLengthValidator`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `gotham_formdata::validate::MinLengthValidator: gotham_formdata::validate::Validator<u8>` is not satisfied
 --> $DIR/validate_min_length_on_u8.rs:3:10
  |
3 | #[derive(FormData)]
  |          ^^^^^^^^ the trait `gotham_formdata::validate::Validator<u8>` is not implemented for `gotham_formdata::validate::MinLengthValidator`
  |
  = help: the following implementations were found:
            <gotham_formdata::validate::MinLengthValidator as gotham_formdata::validate::Validator<T>>
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
